fixed the issue with the mobile navigation header. adjusted z-index to rearrange the depth of the page to properly show the different header options.

--- a/src/styles/AboutMe.scss
+++ b/src/styles/AboutMe.scss
@@ -6,7 +6,7 @@ div.about-me{
       top: 50%;
       justify-items: center;
       font-family: 'Comfortaa', cursive;
-      @media screen and (max-width: 380px){
+      @media screen and (max-width: 600px){
         position: relative;
       }
   }
@@ -18,7 +18,7 @@ div.about-me{
   justify-content: center;
   text-decoration: underline;
   margin-bottom: 3%;
-  @media screen and (max-width: 380px){
+  @media screen and (max-width: 600px){
     max-width: 350px;
     padding: 10px 0px;
   }
@@ -34,7 +34,7 @@ div.about-me{
   .job-title{
     font-size: 1000%;
     font-family: 'Comfortaa', cursive;
-    @media screen and (max-width: 380px){
+    @media screen and (max-width: 600px){
       font-size: 38px;
     }
 
@@ -42,7 +42,7 @@ div.about-me{
   .tech-icons{
     display: flex;
     justify-content: space-evenly;
-    @media (max-width: 380px){
+    @media (max-width: 600px){
       flex-direction: row;
       flex-wrap: wrap;
     }
@@ -52,4 +52,3 @@ div.about-me{
     justify-content: flex-end;
     padding-top: 15%;
   }
-  
